--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.5.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
+        "webpatser/laravel-uuid": "^3.0",
         "nesbot/carbon": "^1.22",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
