--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,15 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
-        "fideloper/proxy": "~3.3",
-        "laravel/framework": "5.5.*",
-        "laravel/socialite": "^3.0",
+        "php": "^7.1.3",
+        "barryvdh/laravel-cors": "^0.11.3",
+        "fideloper/proxy": "^4.0",
+        "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.3",
+        "laravel/socialite": "^4.1",
         "laravel/tinker": "~1.0",
         "webpatser/laravel-uuid": "^3.0",
-        "nesbot/carbon": "^1.22",
-        "yajra/laravel-datatables-oracle": "~8.0"
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
